# trrc

./: .gitignore  README.md  addstring.py  anki-import-test.sh  ankiadderall.py  cool-manual.1  create_parser.py  options.py  parseronly.py  pyproject.toml  requirements.txt  setup.py
.github/: issue_template.md
ankiadderall/: __main__.py  addstring.py  ankiadderall.py  configOpts.py  config_opts.py  create_parser.py  options.py  parserOpts.py  parser_opts.py  utils.py
docs/: trrc.1
docs/tips/AnkiConnect_configure/: AnkiConnect_addon_configure_example.md
docs/tips/iOS_shortcuts_setting_example/: iOS_shortcuts_example.md
scripts/: _trrc  trrc
src/trrc/: config_opts.py  parser_opts.py  utils.py
test/: anki-import-test.sh  examples.py  test-ankiconnect-availability.py  test-class-card.01.py  test-classAnkiConnect.temp.py  test-do-not-use-print-in-code.py  test-get-sys-argv.py  test-import-code.py  test-import-multiple-card-from-sys-argv.01.py  test-import-multiple-card.01.py  test-import-multiple-card.02-cloze.py  test-pipe_redirection.sh  test-stdin_file_option.sh  test-stdin_string_escape_delimiter.sh  test-stdin_string_no_escape_delimiter.sh  test_ankiadderall.py  test_card_strings.txt  test_cardcontentsHandle.py  test_classAnkiConnect.py  test_create_parser.py  test_options.py  test_pipe_redirection.py  test_utils.py
test/os_environ/: get_os_env.py
tests/: test-pipe_redirection.sh  test_cardcontentsHandle.py  test_classAnkiConnect.py  test_create_parser.py  test_options.py
trrc/: __main__.py  config_opts.py  create_parser.py  parser_opts.py  utils.py
